Footer: Bugfix regarding horizontal alignment.
(Forget to reset a padding-left)

--- a/src/scss/05_modules/_footer-box.scss
+++ b/src/scss/05_modules/_footer-box.scss
@@ -14,4 +14,5 @@ $footer-box-font-size: 0.8rem;
 
 .footer-box--list {
     list-style-type: none;
+    padding: 0;
 }
